# reposkillopt

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  (+1 more)
docs/: ARCHITECTURE.md
engine/: README.md  pyproject.toml
engine/examples/: gate-fake.json  optimize-fake.json  optimize-skillopt.json
engine/reposkillopt_engine/: __init__.py  artifact_checks.py  benchmark.py  cli.py  commit_gate.py  completeness.py  evidence.py  gate.py  grounding.py  judge.py  ontology.py  optimizer.py  proposal.py  quality.py  refactor.py  refine.py  render.py  retrieval.py  rubric.py  sanitize.py  skillopt_backend.py  skillopt_native.py  structure.py  summarize.py  version.py  workflow.py
engine/reposkillopt_engine/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  fake.py  openai_compatible.py  opencode_cli.py
engine/tests/: helpers.py  test_artifact_checks.py  test_benchmark.py  test_claude_cli_live.py  test_cli_lowcontext.py  test_commit_gate.py  test_completeness.py  test_evidence.py  test_gate.py  test_grounding.py  test_ontology.py  test_opencode_cli.py  test_optimizer.py  test_oss_robustness.py  test_proposal.py  test_quality.py  test_refactor.py  test_refine.py  test_render.py  test_retrieval.py  test_rubric.py  test_skillopt_backend.py  test_skillopt_native.py  test_structure.py  test_summarize.py  test_version.py  test_workflow_view.py
installer/: README.md  reposkillopt-install
rubric/: asis-architecture-rubric.md  deterministic-checks.md  evaluation-rubric.md  held-out-set.md  tobe-orchestration-rubric.md  validation-gate.md
scripts/: README.md  coverage-gate.sh
templates/: adr.md  architecture-view.md  change-impact-analysis.md  design-doc.md  human-feedback.md  repository-specification-checklist.md  repository-specification.md  rollout-log.md  skill-edit-proposal.md  task-ledger.md
(+214 files in other folders)
